<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/home_icon_24"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/search_icon_24"
        android:title="@string/title_dashboard" />

    <item
        android:id="@+id/navigation_scan"
        android:title="@string/title_scan" />
    <item
        android:id="@+id/navigation_history"
        android:icon="@drawable/statistic_icon_24"
        android:title="@string/title_history" />
    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/user_icon_24"
        android:title="@string/title_profile" />
</menu>